--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dependencies = [
     "psutil~=5.9.5",
     "psycopg2-binary~=2.9.1",
     "pyOpenSSL~=24.2.1",
+    "pycryptodome~=3.17.0", 
     "pydantic~=2.7.0",
     "pyotp~=2.8.0",
     "python-dateutil~=2.8.2",
@@ -64,7 +65,7 @@ dependencies = [
     "hiredis~=2.2.3",
     "requests-oauthlib~=1.3.1",
     "requests~=2.32.0",
-    "rq==1.15.1",
+    "rq==2.1.0",
     "rsa>=4.1",
     "semantic-version~=2.10.0",
     "sentry-sdk~=1.37.1",
