replace name to id in frappe/integrations

--- a/frappe/integrations/doctype/push_notification_settings/push_notification_settings.json
+++ b/frappe/integrations/doctype/push_notification_settings/push_notification_settings.json
@@ -49,7 +49,7 @@
   "modified": "2024-03-23 16:03:35.768559",
   "modified_by": "Administrator",
   "module": "Integrations",
-  "name": "Push Notification Settings",
+  "id": "Push Notification Settings",
   "owner": "Administrator",
   "permissions": [
     {
